# prime-legal-envs

./: .gitignore  LICENSE  README.md
environments/valid_action/: README.md  pyproject.toml
environments/valid_action/config/: system_prompt.txt
environments/valid_action/scripts/: baselines.py
environments/valid_action/tests/: __init__.py  test_environment.py  test_property.py  test_render_and_search.py  test_reward_hacking.py  test_scoring.py  test_tools.py  test_world_checkpoint.py
environments/valid_action/valid_action/: __init__.py  valid_action.py
environments/valid_action/valid_action/core/: __init__.py  fixtures.py  generator.py  models.py  oracle.py  render.py  requirements.py  scoring.py  search.py  serialization.py  tools.py  validator.py
