[project]
name = "valid-action"
description = "Synthetic corporate-governance legal-agent environment (Prime Intellect)."
tags = ["legal", "agent", "tool-use", "synthetic", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.14",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["valid_action.py", "valid_action/", "config/", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
